Add Firebase server integration with one-vote-per-user tracking

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
                     <span class="option-label">Option A</span>
                 </div>
                 <div class="team-name">TEAMYSN</div>
-                <button class="vote-btn vote-btn-a" onclick="voteForTeam('A')">
+                <button class="vote-btn vote-btn-a" id="voteButtonA" onclick="voteForTeam('A')">
                     Vote for TEAMYSN ✓
                 </button>
-                <div class="vote-count" id="countA">0 votes</div>
+                <div class="vote-count" id="countA">
+                    <span class="loading">Loading...</span>
+                </div>
             </div>
 
             <div class="option-card" id="optionB">
@@ -30,16 +32,21 @@
                     <span class="option-label">Option B</span>
                 </div>
                 <div class="team-name">TEAMNVD</div>
-                <button class="vote-btn vote-btn-b" onclick="voteForTeam('B')">
+                <button class="vote-btn vote-btn-b" id="voteButtonB" onclick="voteForTeam('B')">
                     Vote for TEAMNVD ✓
                 </button>
-                <div class="vote-count" id="countB">0 votes</div>
+                <div class="vote-count" id="countB">
+                    <span class="loading">Loading...</span>
+                </div>
             </div>
         </div>
 
         <div class="message-box" id="messageBox"></div>
     </div>
 
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
     <script src="poll.js"></script>
 </body>
 </html>
